--- a/Recipe_Sharing_Website/Components/Layout/MainLayout.razor
+++ b/Recipe_Sharing_Website/Components/Layout/MainLayout.razor
@@ -5,17 +5,7 @@
         <NavMenu />
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+    <main class="content px-3">
+        @Body
     </main>
-</div>
-
-<div class="container mt-3">
-    @Body
 </div>
