--- a/Recipe_Sharing_Website/Components/Routes.razor
+++ b/Recipe_Sharing_Website/Components/Routes.razor
@@ -1,15 +1,14 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 @using Recipe_Sharing_Website.Components.Layout
-<Microsoft.AspNetCore.Components.Authorization.CascadingAuthenticationState>
+
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <h3>Not found</h3>
-            <p>The page you requested does not exist.</p>
+            <p>Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
 </Router>
-</Microsoft.AspNetCore.Components.Authorization.CascadingAuthenticationState>
